docs: note git log as source of truth

--- a/回答2.md
+++ b/回答2.md
@@ -25,7 +25,10 @@ git push
 
 - commit 1: `1a476cf`（`chore: commit docs and ignore local maven`）
 - commit 2: `237e3ed`（`docs: update 回答2.md with commit result`）
+- commit 3: `597eea4`（`docs: finalize 回答2.md with latest commits`）
 - push: `master -> https://github.com/888001/finalshell-clone.git`
+
+说明：如果你看到后续还有提交，一般是对本文档的补充修订，以 `git log -n 5` 为准。
 
 ## 若推送失败（认证/权限）
 
