--- a/回答2.md
+++ b/回答2.md
@@ -23,9 +23,7 @@ git push
 
 ## 执行结果（已完成）
 
-- commit 1: `1a476cf`（`chore: commit docs and ignore local maven`）
-- commit 2: `237e3ed`（`docs: update 回答2.md with commit result`）
-- commit 3: `597eea4`（`docs: finalize 回答2.md with latest commits`）
+- 最新提交（HEAD）：请以 `git log -1 --oneline` 输出为准。
 - push: `master -> https://github.com/888001/finalshell-clone.git`
 
 说明：如果你看到后续还有提交，一般是对本文档的补充修订，以 `git log -n 5` 为准。
